# oheyoheyohey

./: CMakeLists.txt  README.md
.github/: pull_request_template.md
.github/workflows/: pr-labels-semver.yaml
include/: chexchexchex.hpp
ricardian/: oheyoheyohey.clauses.md  oheyoheyohey.contracts.md
scripts/: .gitignore  config.ini
src/: CMakeLists.txt  chexchexchex.cpp
tests/: specific.sh
tests/system/: burn.sh  unlock.sh
